--- a/static/i18n/zh.json
+++ b/static/i18n/zh.json
@@ -15,7 +15,7 @@
   "ok": "确定",
   "name": "名字",
   "comment": "留言",
-  "eat-kano": "吃掉小鹿乃",
+  "eat-kano": "吃掉赵球",
   "default-dfjk": "默认为DFJK",
   "default-20s": "默认为20秒",
   "game-title": "新概念音游",
@@ -31,19 +31,19 @@
   "home": "主页",
   "rank": "排行",
   "repo": "仓库",
-  "text-level-1": "试着好好练一下?",
-  "text-level-2": "TCL",
-  "text-level-3": "TQL",
-  "text-level-4": "您",
-  "text-level-5": "人?",
+  "text-level-1": "我给你一锤！",
+  "text-level-2": "哎呀我都生气！我生气啊我！",
+  "text-level-3": "你们就这么对我吧！就这么对我！",
+  "text-level-4": "我成一个水人了~",
+  "text-level-5": "舒服吧 绝了都！",
   "time-over": "倒计时多了",
-  "rank-title": "吃掉小鹿乃-排行榜",
+  "rank-title": "吃掉赵球-排行榜",
   "query-record": "查询记录",
   "day-rank": "排行榜[日]",
   "week-rank": "排行榜[周]",
   "month-rank": "排行榜[月]",
   "all-rank": "排行榜[总]",
-  "navbar-brand": "吃掉小鹿乃-排行榜",
+  "navbar-brand": "吃掉赵球-排行榜",
   "daily-ranking": "日榜",
   "weekly-ranking": "周榜",
   "monthly-ranking": "月榜",
