--- a/static/i18n/zh.json
+++ b/static/i18n/zh.json
@@ -18,9 +18,9 @@
   "eat-kano": "吃掉赵球",
   "default-dfjk": "默认为DFJK",
   "default-20s": "默认为20秒",
-  "game-title": "新概念音游",
-  "game-intro1": "从最底下的开始",
-  "game-intro2": "看你能得多少分",
+  "game-title": "吃掉赵球",
+  "game-intro1": "赵球在一边鹅鹅鹅",
+  "game-intro2": "看着你能得多少分",
   "record-rank": "用于纪录排行(特殊字符会被过滤)",
   "no-ad-bad-lang": "禁广告/脏话(本项可不填)",
   "time-up": "时间到",
@@ -30,7 +30,7 @@
   "again": "重来",
   "home": "主页",
   "rank": "排行",
-  "repo": "仓库",
+  "repo": "开源",
   "text-level-1": "我给你一锤！",
   "text-level-2": "哎呀我都生气！我生气啊我！",
   "text-level-3": "你们就这么对我吧！就这么对我！",
