--- a/static/i18n/zh.json
+++ b/static/i18n/zh.json
@@ -33,7 +33,7 @@
   "repo": "开源",
   "text-level-1": "我给你一锤！",
   "text-level-2": "哎呀我都生气！我生气啊我！",
-  "text-level-3": "你们就这么对我吧！就这么对我！",
+  "text-level-3": "你就这么对我吧！就这么对我！",
   "text-level-4": "我成一个水人了~",
   "text-level-5": "舒服吧 绝了都！",
   "time-over": "倒计时多了",
