--- a/static/i18n/zh.json
+++ b/static/i18n/zh.json
@@ -35,7 +35,7 @@
   "text-level-2": "哎呀我都生气！我生气啊我！",
   "text-level-3": "你就这么对我吧！就这么对我！！",
   "text-level-4": "我成一个水人了~",
-  "text-level-5": "舒服吧 绝了都！",
+  "text-level-5": "舒服吧，绝了都！",
   "time-over": "倒计时多了",
   "rank-title": "吃掉赵球-排行榜",
   "query-record": "查询记录",
