--- a/static/i18n/zh.json
+++ b/static/i18n/zh.json
@@ -15,12 +15,12 @@
   "ok": "确定",
   "name": "名字",
   "comment": "留言",
-  "eat-kano": "吃掉赵球",
+  "eat-kano": "吃掉囧尼",
   "default-dfjk": "默认为DFJK",
   "default-20s": "默认为20秒",
-  "game-title": "吃掉赵球",
-  "game-intro1": "赵球在一边鹅鹅鹅",
-  "game-intro2": "一边看着你能得多少分",
+  "game-title": "吃掉囧尼",
+  "game-intro1": "囧尼在一边撸辣胖",
+  "game-intro2": "一边偷瞄你能得多少分",
   "record-rank": "用于纪录排行(特殊字符会被过滤)",
   "no-ad-bad-lang": "禁广告/脏话(本项可不填)",
   "time-up": "时间到",
@@ -31,19 +31,19 @@
   "home": "主页",
   "rank": "排行",
   "repo": "开源",
-  "text-level-1": "我给你一锤！",
-  "text-level-2": "哎呀我都生气！我生气啊我！",
-  "text-level-3": "你就这么对我吧！就这么对我！！",
-  "text-level-4": "我成一个水人了~",
-  "text-level-5": "舒服吧，绝了都！",
+  "text-level-1": "上不了台面！",
+  "text-level-2": "旧的不去新的不来，是该放下了",
+  "text-level-3": "空气有点干燥",
+  "text-level-4": "池式飞吻~",
+  "text-level-5": "太他*好了！",
   "time-over": "倒计时多了",
-  "rank-title": "吃掉赵球-排行榜",
+  "rank-title": "吃掉囧尼-排行榜",
   "query-record": "查询记录",
   "day-rank": "排行榜[日]",
   "week-rank": "排行榜[周]",
   "month-rank": "排行榜[月]",
   "all-rank": "排行榜[总]",
-  "navbar-brand": "吃掉赵球-排行榜",
+  "navbar-brand": "吃掉囧尼-排行榜",
   "daily-ranking": "日榜",
   "weekly-ranking": "周榜",
   "monthly-ranking": "月榜",
